Make Java 17 baseline (fixes #348)
- Compile for Java 17
- Use new language features (switch expression, multiline-comments, ...)